--- a/frontend/src/Components/Dashboard/SurveyGrid/SurveyGrid.css
+++ b/frontend/src/Components/Dashboard/SurveyGrid/SurveyGrid.css
@@ -4,7 +4,7 @@
   gap: 1.5rem;
   width: 100%;
   align-content: start;
-  padding-top: 5%;
+  padding: 0.5rem 0 0 0;
 }
 
 .survey-card {
